--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -595,8 +595,8 @@ void main(void) {
 	cameraControl(camera);
 #if DEBUG
 	if (debugCamera) {
-		camera.eye     = cameraPos;
-		camera.forward = cameraDir;
+		camera.eye    = cameraPos;
+		camera.target = cameraPos + cameraDir;
 	}
 #endif
 
@@ -681,7 +681,7 @@ void main(void) {
 							replace(/\b(time)\b/g, "iGlobalTime");
 					});
 				},
-				camera: 'GLSL',
+				camera: 'Auto',
 				resolution: 256,
 				pixelRatio: 1,
 				aspectRatio: 4/3,
@@ -704,7 +704,7 @@ void main(void) {
 						resolution: { type: 'v2', value: new THREE.Vector2( config.resolution, config.resolution ) },
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
-						debugCamera: { type: 'i', value: config.camera !== 'GLSL' },
+						debugCamera: { type: 'i', value: config.camera !== 'Auto' },
 						cameraPos: { type: 'v3', value: camera.getWorldPosition() },
 						cameraDir: { type: 'v3', value: camera.getWorldDirection() },
 					},
@@ -747,7 +747,7 @@ void main(void) {
 				gui.add( config, 'soucePlain' ).name( 'Souce Plain' );
 				gui.add( config, 'souceRelease' ).name( 'Souce Release' );
 				gui.add( config, 'souceShaderToy' ).name( 'Souce ShaderToy' );
-				gui.add( config, 'camera', [ 'GLSL', 'Orbit', /*'Fly'*/ ] ).name( 'Camera' );
+				gui.add( config, 'camera', [ 'Auto', 'Orbit' ] ).name( 'Camera' );
 				gui.add( config, 'resolution', [ 256, 512, 800, 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 					onWindowResize();
 				} );
@@ -793,7 +793,7 @@ void main(void) {
 				//material.uniforms.time.value = 105;
 				//material.uniforms.time.value = 148;
 				//material.uniforms.time.value = 142;
-				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
+				material.uniforms.debugCamera.value = config.camera !== 'Auto';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
 				renderer.render( scene, camera );
