--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -685,7 +685,7 @@ void main(void) {
 				resolution: 256,
 				pixelRatio: 1,
 				aspectRatio: 4/3,
-				offsetTime: 0,
+				time: 0,
 			};
 
 			init();
@@ -757,7 +757,7 @@ void main(void) {
 				gui.add( config, 'aspectRatio', { '16:9': 16/9, '4:3' : 4/3, '2:1': 2, '1:1': 1.0 } ).name( 'Aspect Ratio' ).onChange( function( value ) {
 					onWindowResize();
 				} );
-				gui.add( config, 'offsetTime', 0, 180 ).step( 1 ).name( 'Offset Time' );
+				gui.add( config, 'time', 0, 182 ).step( 0.1 ).name( 'time' ).listen();
 
 				stats = new Stats();
 				document.body.appendChild( stats.domElement );
@@ -767,6 +767,7 @@ void main(void) {
 			function render( timestamp ) {
 
 				var delta = clock.getDelta();
+				config.time += delta;
 
 				stats.begin();
 
@@ -784,7 +785,7 @@ void main(void) {
 
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
-				material.uniforms.time.value = timestamp * 0.001 + config.offsetTime;
+				material.uniforms.time.value = config.time;
 				//material.uniforms.time.value = 105;
 				//material.uniforms.time.value = 148;
 				//material.uniforms.time.value = 142;
