--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -744,7 +744,7 @@ void main(void) {
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save as PNG' );
-				gui.add( config, 'soucePlain' ).name( 'view Shader' );
+				//gui.add( config, 'soucePlain' ).name( 'view Shader' );
 				gui.add( config, 'souceRelease' ).name( 'GLSL sandbox' );
 				gui.add( config, 'souceShaderToy' ).name( 'ShaderToy' );
 				gui.add( config, 'camera', [ 'Auto', 'Orbit' ] ).name( 'Camera' );
