--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -686,6 +686,7 @@ void main(void) {
 				pixelRatio: 1,
 				aspectRatio: 4/3,
 				time: 0,
+				pause: false,
 			};
 
 			init();
@@ -758,6 +759,7 @@ void main(void) {
 					onWindowResize();
 				} );
 				gui.add( config, 'time', 0, 182 ).step( 0.1 ).name( 'time' ).listen();
+				gui.add( config, 'pause' ).name( 'Pause' );
 
 				stats = new Stats();
 				document.body.appendChild( stats.domElement );
@@ -767,6 +769,12 @@ void main(void) {
 			function render( timestamp ) {
 
 				var delta = clock.getDelta();
+
+				if ( config.pause ) {
+					requestAnimationFrame( render );
+					return;
+				}
+
 				config.time += delta;
 
 				stats.begin();
