--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-// Title: Fusioned Bismuth (TokyoDemoFest GLSL Graphics Compo 3rd place)
+// Title: Fusioned Bismuth (TokyoDemoFest 2017 GLSL Graphics Compo 3rd place)
 // Copyright (c) 2017 gam0022
 // License: Attribution-NonCommercial-ShareAlike (http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US)
 -->
@@ -47,7 +47,7 @@
 		</div>
 
 		<script id="fragment_shader" type="x-shader/x-fragment">
-// Title: Fusioned Bismuth (TokyoDemoFest GLSL Graphics Compo 3rd place)
+// Title: Fusioned Bismuth (TokyoDemoFest 2017 GLSL Graphics Compo 3rd place)
 // Copyright (c) 2017 gam0022
 // License: Attribution-NonCommercial-ShareAlike (http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US)
 //
