--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -667,7 +667,7 @@ void main( void ) {
 
 	// fragment position
 	//vec2 fragPos = ( gl_FragCoord.xy * 2.0 - resolution ) / resolution;
-	vec2 fragPos = (2.0 * (gl_FragCoord.xy + (hash23(vec3(float(frame), gl_FragCoord.xy)) - 0.5)) - resolution) / resolution;
+	vec2 fragPos = ( 2.0 * ( gl_FragCoord.xy + hash23( vec3( float( frame ), gl_FragCoord.xy ) ) - 0.5 ) - resolution ) / resolution;
 
 	// camera and ray
 	vec4 rayTip = cameraWorldMatrix * cameraProjectionMatrixInverse * vec4( fragPos.xy, 1.0, 1.0 );
@@ -680,8 +680,12 @@ void main( void ) {
 	vec3 color = vec3( 1.0 );
 	for ( int bounce = 0; bounce <= BOUNCE_LIMIT; bounce++ ) {
 		calcRadiance( intersection, ray, bounce );
-		color *= 	intersection.material.emission * fetchTextureMaterial( intersection.material.emissionTexture, intersection.uv ) + 
-					intersection.material.color    * fetchTextureMaterial( intersection.material.colorTexture, intersection.uv );
+
+		// レンダリング方程式
+		color =
+			intersection.material.emission * fetchTextureMaterial( intersection.material.emissionTexture, intersection.uv ) +
+			color * intersection.material.color * fetchTextureMaterial( intersection.material.colorTexture, intersection.uv );
+
 		if ( !intersection.hit ) break;
 
 		// 光源に到達しないケースなら明るさは0
