--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -587,7 +587,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 </script>
 
 <script id="float_fragment_shader_p2" type="x-shader/x-fragment">
-void shotRay( inout Intersection intersection, inout Ray ray, int bounce ) {
+void shootRay( inout Intersection intersection, inout Ray ray, int bounce ) {
 	intersection.hit = false;
 	intersection.distance = INF;
 	intersection.material.colorTexture = 0;
@@ -660,6 +660,31 @@ void shotRay( inout Intersection intersection, inout Ray ray, int bounce ) {
 	}
 }
 
+vec3 calcRadiance( inout Ray ray ) {
+	// bounce
+	Intersection intersection;
+	vec3 acc = vec3( 0.0 );
+	vec3 ref = vec3( 1.0 );
+	for ( int bounce = 0; bounce <= BOUNCE_LIMIT; bounce++ ) {
+		shootRay( intersection, ray, bounce );
+
+		// レンダリング方程式は再帰的な定義だがGLSLでは再帰できないので、ループに直して計算する
+		vec3 emission = intersection.material.emission * fetchTextureMaterial( intersection.material.emissionTexture, intersection.uv );
+		vec3 color    = intersection.material.color * fetchTextureMaterial( intersection.material.colorTexture, intersection.uv );
+		acc += ref * emission;
+		ref *= color;
+
+		if ( !intersection.hit ) break;
+	}
+
+	// 負の輝度値は除去（根本対応したい）
+	if ( acc.r >= 0.0 && acc.g >= 0.0 && acc.b >= 0.0 ) {
+		return acc;
+	} else {
+		return vec3( 0.0 );
+	}
+}
+
 void main( void ) {
 	// previous color
 	vec2 uv = gl_FragCoord.xy / resolution.xy;
@@ -675,28 +700,7 @@ void main( void ) {
 	ray.origin = cameraPosition;
 	ray.direction = normalize( rayTip.xyz );
 
-	// bounce
-	Intersection intersection;
-	vec3 acc = vec3( 0.0 );
-	vec3 ref = vec3( 1.0 );
-	for ( int bounce = 0; bounce <= BOUNCE_LIMIT; bounce++ ) {
-		shotRay( intersection, ray, bounce );
-
-		// レンダリング方程式は再帰的な定義だがGLSLでは再帰できないので、ループに直して計算する
-		vec3 emission = intersection.material.emission * fetchTextureMaterial( intersection.material.emissionTexture, intersection.uv );
-		vec3 color    = intersection.material.color * fetchTextureMaterial( intersection.material.colorTexture, intersection.uv );
-		acc += ref * emission;
-		ref *= color;
-
-		if ( !intersection.hit ) break;
-	}
-
-	// 負の輝度値の結果は除去
-	if ( acc.r >= 0.0 && acc.g >= 0.0 && acc.b >= 0.0 ) {
-		gl_FragColor = vec4( prevColor.rgb + acc, 1.0 );
-	} else {
-		gl_FragColor = prevColor;
-	}
+	gl_FragColor = vec4( prevColor.rgb + calcRadiance( ray ), 1.0 );
 }
 </script>
 
