Use EXT_shader_texture_lod (ジャギが減った)

--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -54,6 +54,7 @@ void main(void) {
 </script>
 
 <script id="float_fragment_shader_p1" type="x-shader/x-fragment">
+#extension GL_EXT_shader_texture_lod : enable
 precision highp float;
 
 //
@@ -655,7 +656,7 @@ void shootRay( inout Intersection intersection, inout Ray ray, int bounce ) {
 			}
 		}
 	} else {
-		intersection.material.emission = textureCube( cubeMap, ray.direction ).rgb;
+		intersection.material.emission = textureCubeLodEXT( cubeMap, ray.direction, 0.0 ).rgb;
 		intersection.material.color    = vec3( 1.0 );
 	}
 }
@@ -1017,7 +1018,12 @@ function init() {
 
 	// extentions
 	if ( !renderer.extensions.get( "OES_texture_float" ) ) {
-		alert( "No OES_texture_float support for float textures." );
+		alert( "OES_texture_float is not supported." );
+		return;
+	}
+
+	if ( !renderer.extensions.get( "EXT_shader_texture_lod" ) ) {
+		alert( "EXT_shader_texture_lod is not supported." );
 		return;
 	}
 
