プリセットのシーンを修正

--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -762,7 +762,7 @@ var config = {
 
 	// Scene Edit
 	preset: "basic",
-	envmap: "pisa",
+	envmap: "castle",
 	transformMode: function() {
 		editor.toggleTransformMode();
 	},
