--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -413,15 +413,15 @@ void sampleRefraction(vec2 Xi, inout Intersection intersection, inout Ray ray, v
 	}
 }
 
-// http://d.hatena.ne.jp/hanecci/20130727/p2
-float GGX_G_1( float Roughness, float NoV ) {
-    float k = 0.5 * Roughness * Roughness;
-    return NoV / ( NoV * ( 1.0 - k ) + k );
-}
-
-float GGX_G( float Roughness, float NoV, float NoL ) {
-    return GGX_G_1( Roughness, NoV ) * GGX_G_1( Roughness, NoL );
-}
+//// http://d.hatena.ne.jp/hanecci/20130727/p2
+//float GGX_G_1( float Roughness, float NoV ) {
+//    float k = 0.5 * Roughness * Roughness;
+//    return NoV / ( NoV * ( 1.0 - k ) + k );
+//}
+//
+//float GGX_G( float Roughness, float NoV, float NoL ) {
+//    return GGX_G_1( Roughness, NoV ) * GGX_G_1( Roughness, NoL );
+//}
 
 
 //
@@ -666,28 +666,14 @@ void shootRay( inout Intersection intersection, inout Ray ray, int bounce ) {
 		} else if ( intersection.material.type == MATERIAL_TYPE_REFRACTION ) {
 			sampleRefraction( Xi, intersection, ray, intersection.normal );
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX ) {
-			vec3 N = intersection.normal;
-			vec3 V = -ray.direction;
-			vec3 H = importanceSampleGGX( Xi, roughness, N );
-			vec3 L = reflect( ray.direction, H );
-			//vec3 L = 2.0 * dot( V, H ) * H - V;
+			vec3 H = importanceSampleGGX( Xi, roughness, intersection.normal );
+			ray.direction = reflect( ray.direction, H );
 
-			float NoV = saturate( dot( N, V ) );// x x
-			float NoL = saturate( dot( N, L ) );// x x
-			float NoH = saturate( dot( N, H ) );// o o
-			float VoH = saturate( dot( V, H ) );// x x
-
-			if( NoL > 0.0 ) {
-				float G = GGX_G( roughness, NoV, NoL );
-				float Fc = pow( 1.0 - VoH, 5.0 );
-				vec3 F = (1.0 - Fc) * SpecularColor + Fc;
-				intersection.material.color *= F * G * VoH / ( NoH * NoV );
-			} else {
-				// 半球外が選ばれた場合、どう対応するのがベストなのだろう…
-				// BRDFを0にすると真値よりも暗くなる気がする
+			if( dot( intersection.normal, ray.direction ) <= 0.0 ) {
+				// 半球外が選ばれた場合はBRDFを0にする
+				// 真値よりも暗くなるので、サンプリングやり直す方が理想的ではありそう
+				intersection.material.color = vec3( 0.0 );
 			}
-
-			ray.direction = L;
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX_REFRACTION ) {
 			vec3 H = importanceSampleGGX( Xi, roughness, intersection.normal );
 			sampleRefraction( Xi, intersection, ray, H );
@@ -715,12 +701,13 @@ vec3 calcRadiance( inout Ray ray ) {
 		if ( !intersection.hit ) break;
 	}
 
-	// 負の輝度値は除去（GGXのサンプリング処理が原因で負の輝度のレイが混じる）
-	if ( acc.r >= 0.0 && acc.g >= 0.0 && acc.b >= 0.0 ) {
-		return acc;
-	} else {
-		return vec3( 0.0 );
-	}
+	return acc;
+	//// 負の輝度値は除去（負の輝度のレイは発生しなくなったのでコメントアウト）
+	//if ( acc.r >= 0.0 && acc.g >= 0.0 && acc.b >= 0.0 ) {
+	//	return acc;
+	//} else {
+	//	return vec3( 0.0 );
+	//}
 }
 
 void main( void ) {
